styles.css
/* ... */
.dropdown-column {
	display: flex;
	flex-direction: column;
	gap: 10px;
}

.dropdown-item {
	color: #000;
	text-decoration: none;
	font-size: 14px;
}

.dropdown-item span {
	display: block;
	font-size: 12px;
	color: #777;
}

/* Responsive design for mobile */
@media (max-width: 768px) {
	.dropdown {
		width: 100%;
		left: 0;
		top: 40px;
		grid-template-columns: 1fr;
	}
}

/* Show dropdown when active class is added */
.dropdown.active {
	display: grid;
}

/* Style for selected dropdown item */
.dropdown-item.selected {
	color: #ff5722; /* Change text color to orange */
	font-weight: bold;
}

/* Background Icons */
.background-icons {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 0;
	pointer-events: none;
}

.icon {
	position: absolute;
	opacity: 0.8;
}

.speed-icon {
	top: 25%;
	left: 18%;
	width: 150px;
	opacity: 1;
	width: 15%;
}

.rocket-icon {
	top: 55%;
	right: 15%;
	width: 150px;
}

.thunder-icon {
	bottom: 20%;
	left: 10%;
	width: 100px;
}

.star-icon {
	top: 95%;
	left: 20%;
	width: 30px;
}

@media (max-width: 768px) {
	.speed-icon {
		display: none;
	}

	.rocket-icon {
		width: 60px;
		left: 10%;
	}

	.thunder-icon {
		width: 50px;
		right: 5%;
	}
}

/* Main section styles */
.main-section {
	text-align: center;
	padding: 150px 20px 0px;
	background-color: #ffffff;
}

.main-section h1 {
	font-size: 4em;
	margin-bottom: 8px;
}

.main-section h1 span {
	color: var(---main-font-color);
}

@media (max-width: 768px) {
	.main-section h1 {
		font-size: 3em;
		margin-bottom: 8px;
	}

	.main-section h1 span {
		color: var(---main-font-color);
	}
}

.get-start-p {
	font-size: 1.2em;
	margin-bottom: 20px;
	font-weight: 500;
	color: var(---main-font-color);
}

.cta-buttons {
	display: flex;
	justify-content: center;
	gap: 20px;
}

.cta-buttons button {
	padding: 10px 20px;
	border: none;
	cursor: pointer;
	font-size: 1em;
}

.get-started-btn {
	background-color: var(---main-font-color);
	border: none;
	color: white;
	border-radius: 30px;
}
.watch-btn span {
	color: red !important;
}
.watch-btn {
	background-color: #ffffff;
	border: 0.5px solid #a8c9fa !important;
	font-weight: bold;
	/*color: #ff4d4d;*/
	font-size: 0.8em;
	border-radius: 30px;
}
.watch-btn:hover {
	background: var(---main-font-color);
	color: white;
}
.watch-btn:hover span {
	color: white !important;
}
.verification-count {
	margin-top: 20px;
	font-size: 0.8 em;
	color: #7691dd;
}

.image-section img {
	width: 500px;
	margin-top: 10px;
}

@media (max-width: 768px) {
	.image-section img {
		width: 100%;
		margin-top: 10px;
	}
}

/* WhatsApp Section */
.whatsapp-section {
	background-color: #f0f8ff;
	padding: 50px 20px;
	text-align: center;
	position: relative;
	z-index: -1;
}

.whatsapp-section h2 {
	font-size: 35px;
	margin-bottom: 20px;
}

.phone-border {
	background-color: #f6e8a7;
	border-radius: 35px;
	padding: 25px 10px 20px 10px;
	display: inline-block;
}

.phone {
	background-color: #ffffff;
	border-radius: 45px;

	height: 500px;
	width: 220px;
	/* Adjusted to smaller width */
	position: relative;
	margin: 0 auto;
	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.phone-header {
	background-color: #ffffff;
	padding: 10px;
	border-radius: 30px 30px 0 0;
	font-weight: bold;
	font-size: 1.4em;
}

.phone-title {
	font-family: "Georgia", sans-serif;
	margin: 0;
	padding: 5px;
	color: black;
	text-align: center;
	font-weight: bold;
}

.phone-notch {
	height: 14px;
	width: 55px;
	background-color: black;
	margin: 10px auto 0;
	border-radius: 10px;
}

/* Phone Content Style */
.phone-content {
	background-color: #ffffff;
	display: flex;
	justify-content: center;
	align-items: flex-end;
	padding: 20px;
	flex-grow: 1;
}

input[type="text"] {
	outline: none;
	width: 75%;
	padding: 10px;
	border-radius: 15px;
	font-size: 0.9em;
	background-color: white;
}

.send-button {
	background-color: #ff6600;
	border-radius: 10px;
	padding: 10px 15px;
	border: none;
	color: white;
	font-size: 0.9em;
	cursor: pointer;
}

/* Labels */
.label {
	position: absolute;
	background-color: #ff4d4d;
	color: white;
	border-radius: 10px;
	width: 250px;
	text-align: left;
	font-size: 16px;
}

.credit-check {
	padding: 3px 15px;
	top: 40%;
	left: 32%;
	border-radius: 50px;
	width: auto;
}

.quick-verification {
	padding: 3px 15px;
	top: 50%;
	right: 20%;
	border-radius: 50px;
	width: auto;
}

.facial-verification {
	padding: 3px 15px;
	top: 65%;
	left: 19%;
	border-radius: 50px;
	width: auto;
}

.instant-verification {
	padding: 3px 15px;
	top: 94%;
	right: 380px;
	border-radius: 50px;
	width: auto;
	/* Allow width to adjust based on content */
}

.triangle {
	width: 1px;
	height: 1px;
	border-left: 8px solid transparent;
	border-right: 8px solid transparent;
	border-bottom: 15px solid #ff5722;
	/* Adjust this color to match your image */
	transform: rotate(200deg);
	/* Rotate to make it point to the right */
	top: 92%;
	right: 590px;
	position: absolute;
}

@media (max-width: 768px) {
	.label {
		padding: 10px;
		font-size: 0.8em;
	}

	.credit-check {
		top: 40%;
		left: 20%;
		right: auto;
		width: 95px;
	}

	.quick-verification {
		top: 380px;
		right: 20%;
		left: auto;
		width: 200px;
	}

	.facial-verification {
		top: 60%;
		left: 25%;
		right: auto;
		width: 180px;
	}

	.instant-verification {
		top: 710px;
		right: 10%;
		left: auto;
	}

	.triangle {
		top: 690px;
		right: 30%;
	}
}

/* Services Section-------------------------------------------------------------------------------------------------------------- */
.services-button {
	background-color: #fff;
	z-index: -1;
}

.services h2 {
	text-align: center;
	margin: 20px 0;
	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
	color: var(---main-font-color);
	padding-top: 20px;
	padding-bottom: 30px;
}

.services h1 {
	text-align: center;
	margin-bottom: 20px;
	font-size: 50px;
	font-weight: 300;
}
/* ... */

